--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,1 +1,14 @@
+.main {
+  width: 800px;
+  max-width: 90%;
+  margin: 5em auto;
+}
 
+.title {
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #0e2a42;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
