--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@ body {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #f1f5f8;
+  height: 100vh;
 }
